--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="topseller.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         body {
             padding: 0px;
             margin: 0px;
-            font-family: 'Montserrat', sans-serif;
+
         }
 
         #topPart {
@@ -29,6 +29,7 @@
             font-size: 15.5px;
             justify-content: center;
             align-items: center;
+            font-family: 'Montserrat', sans-serif;
         }
 
         #nav {
@@ -60,6 +61,7 @@
             display: flex;
             gap: 35px;
             font-size: 17px;
+            font-family: sans-serif;
         }
 
         #btns2 {
@@ -319,7 +321,7 @@
             <span class="dot" onclick="thisImage(4)"></span>
         </div>
     </div>
-    <div id="topSeller">
+    <div class="topSeller">
         <h1 style="text-align:center;">Top Sellers</h1>
 
         <div>
@@ -434,7 +436,172 @@
             </div>
         </div>
     </div>
+    <div class="topSeller">
+        <h1 style="text-align:center;">Trending Earphones</h1>
 
+        <div>
+            <p id="smart">Earbuds</p>
+        </div>
+
+        <div id="smartWatches">
+            <div class="card1">
+                <div>
+                    <img
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/218997d1-3fe9-4a19-809c-94a8a2d05273_400x.png?v=1625045659" />
+                </div>
+                <div>
+                    <div class="star">
+                        <span style="color:#ed1c24;" class="fa fa-star checked"></span>
+                        <p class="ratingNumber">4.73 (114)</p>
+                    </div>
+                    <h3>boAt Airdopes 441 Pro - Bluetooth Wireless Earbuds</h3>
+                    <div>
+                        <p>₹ 2,299</p>
+                        <p>₹ 5,999</p>
+                    </div>
+                    <ul>
+                        <li>Thumping bass & immersive sound
+
+                        </li>
+                        <li>Playback of 5H with each charge
+
+                        </li>
+                        <li> IPX7 rated for complete sweat & water resistance</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card1">
+                <div>
+                    <img
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/402-main-img_400x.png?v=1630059242" />
+                </div>
+                <div>
+                    <div class="star">
+                        <span style="color:#ed1c24;" class="fa fa-star checked"></span>
+
+                        <p class="ratingNumber">4.76 (386)</p>
+                    </div>
+                    <h3>boAt Airdopes 402 - Wireless Earbuds</h3>
+                    <div>
+                        <p>₹ 1,599</p>
+                        <p>₹ 5,990</p>
+                    </div>
+                    <ul>
+                        <li>Ergonomic design
+
+
+                        </li>
+                        <li>Uninterrupted music for 4 hours
+
+
+                        </li>
+                        <li>Pocket-friendly charging case</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card1">
+                <div>
+                    <img
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/main3_6e1b5a7a-8f56-48c6-819d-24395393db81_400x.png?v=1624430639" />
+                </div>
+                <div>
+                    <div class="star">
+                        <span style="color:#ed1c24" class="fa fa-star checked"></span>
+
+                        <p style="color:grey" class=" ratingNumber">4.83 (6)</p>
+                    </div>
+                    <h3>boAt Airdopes 281 Pro</h3>
+                    <div>
+                        <p>₹ 2,499</p>
+                        <p>₹ 6,990</p>
+                    </div>
+                    <ul>
+                        <li>Colour variants for every style
+
+                        </li>
+                        <li>
+
+                            Fast Charge in just 15 minutes
+                        </li>
+
+                        <li>Ace your workouts with IPX5 rating
+                        </li>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card1">
+                <div>
+                    <img
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/main-img_AD621_1_400x.png?v=1616230788" />
+                </div>
+                <div>
+                    <div class="star">
+                        <span style="color:white;" class="fa fa-star checked"></span>
+
+                        <p style="color:white;" class="ratingNumber">5 (2)</p>
+                    </div>
+                    <h3>boAt Airdopes 621 </h3>
+                    <div>
+                        <p>₹ 2,499</p>
+                        <p>₹ 7,990</p>
+                    </div>
+                    <ul>
+                        <li>Perfectly fits ears for dance sessions or workouts
+
+                        </li>
+                        <li>Enjoy 3.5 hours of unstoppable music
+
+                        </li>
+                        <li>IPX5 rated for workouts and adventures</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="newLaunches">
+        <h1>New Launches</h1>
+        <div id="newLaunchesSlides">
+            <div class="slide1">
+                <div class="slide1Img">
+                    <img
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/new-launch-500-anc.jpg?v=1650021089" />
+                </div>
+                <div class="slide1Img2">
+                    <div>
+                        <div>
+                            <img
+                                src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Vector_Smart_Object_6085a897-ef0f-41c5-9690-3de81a71112f.png?v=1642419136" />
+                        </div>
+                        <div>
+                            <p >Wireless Earbuds</p><br>
+                            <hr style="color:#ed1c24">
+                            <h3>AirPodes 500 ANC</h3>
+                            <p>Special Launch Price</p>
+                            <p>Rs. 3999</p>
+                        </div>
+                    </div>
+                    <div class="desFea">
+                        
+                        <div class="description">
+                            <button class="des">DESCRIPTION</button>
+                            <button class="fea">FEATURES</button>
+                            <div ><p>Focus on what matters with Airdopes 500 ANC that helps you tap out of chaos. Block unwanted background noise 
+                            upto 35 dB with its Hybrid Active Noise Cancellation. Make your calls crystal clear with...</p></div>
+                            </div>
+                            
+                            <div></div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+        </div>
+    </div>
 
 
 </body>
@@ -473,9 +640,17 @@
         images[imgNumber - 1].style.display = "block";
         dots[imgNumber - 1].className += " modDot";
     }
-    // document.querySelector("#user").addEventListener("click",function(){
-    //     var menu = document.querySelector("#userMenu");
-    //     menu.style.display="block";
-    // })
-
+   
+  var des = document.querySelector(".fea+div");
+  des.style.display="block"
+  var fea =document.querySelector(".fea+div+div");
+  fea.style.display="none"
+  document.querySelector(".des").addEventListener("click",function(){
+      des.style.display="block";
+      fea.style.display="none";
+  })
+  document.querySelector(".fea").addEventListener("click",function(){
+      des.style.display="none";
+      fea.style.display="block";
+  })
 </script>
