made bottom section of homepage

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <img style="cursor:pointer;" id="gift-card"
                     src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/gift.png?v=1606314809" />
 
-                <a style="cursor:pointer;color:white;position:relative;display:inline-block;" is="toggle-link"
+                <a style="cursor:pointer;color:white;display:inline-block;" is="toggle-link"
                     aria-controls="mini-cart" aria-expanded="false"
                     class="header__icon-wrapper tap-area header__cart cartbtn" aria-label="Cart" data-no-instant=""><svg
                         focusable="false" width="27" height="23" class="icon icon--header-shopping-cart   "
@@ -161,6 +161,7 @@
                         <circle cx="6" cy="17" r="2" fill="none" stroke="currentColor" stroke-width="2"></circle>
                         <circle cx="16" cy="17" r="2" fill="none" stroke="currentColor" stroke-width="2"></circle>
                     </svg>
+                    <sup style="" id="itemsNo"></sup>
                 </a>
                 <div id="userCart">
                    <div id="cartContent">
