updated cart page

--- a/navbar.html
+++ b/navbar.html
@@ -37,8 +37,8 @@
                     </div>
                     <input type="search" id="search" placeholder="Search..." />
                 </div>
-                <a style="cursor:pointer;" id="userbtn"><svg focusable="false" width="18" height="17" class="icon icon--header-customer   "
-                        viewBox="0 0 18 17">
+                <a style="cursor:pointer;" id="userbtn"><svg focusable="false" width="18" height="17"
+                        class="icon icon--header-customer   " viewBox="0 0 18 17">
                         <circle style="color:white;" cx="9" cy="5" r="4" fill="none" stroke="currentColor"
                             stroke-width="3" stroke-linejoin="round"></circle>
                         <path style="color:white;" d="M1 17v0a4 4 0 014-4h8a4 4 0 014 4v0" fill="none"
@@ -53,11 +53,10 @@
                 <img style="cursor:pointer;" id="gift-card"
                     src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/gift.png?v=1606314809" />
 
-                <a style="cursor:pointer;color:white;display:inline-block;" is="toggle-link"
-                    aria-controls="mini-cart" aria-expanded="false"
-                    class="header__icon-wrapper tap-area header__cart cartbtn" aria-label="Cart" data-no-instant=""><svg
-                        focusable="false" width="27" height="23" class="icon icon--header-shopping-cart   "
-                        viewBox="0 0 21 20">
+                <a style="cursor:pointer;color:white;display:inline-block;" is="toggle-link" aria-controls="mini-cart"
+                    aria-expanded="false" class="header__icon-wrapper tap-area header__cart cartbtn" aria-label="Cart"
+                    data-no-instant=""><svg focusable="false" width="27" height="23"
+                        class="icon icon--header-shopping-cart   " viewBox="0 0 21 20">
                         <path d="M0 1H4L5 11H17L19 4H8" fill="none" stroke="currentColor" stroke-width="2"></path>
                         <circle cx="6" cy="17" r="2" fill="none" stroke="currentColor" stroke-width="2"></circle>
                         <circle cx="16" cy="17" r="2" fill="none" stroke="currentColor" stroke-width="2"></circle>
@@ -65,14 +64,15 @@
                     <sup id="itemsNo"></sup>
                 </a>
                 <div id="userCart">
-                   <div id="cartContent">
-                    <p>Your Cart(Cart)<span id="cross" style="color:white;font-size:35px;cursor:pointer;">&times</span></p>
-                    <p>Free Shipping sitewide | Cash On Delivery available for order value upto ₹3000</p>
-                    <div id="empCart">
-                        <p>Your cart is empty</p>
-                        <button style="cursor:pointer;">START SHOPPING</button>
+                    <div id="cartContent">
+                        <p>Your Cart(Cart)<span id="cross1"
+                                style="color:white;font-size:35px;cursor:pointer;">&times</span></p>
+                        <p>Free Shipping sitewide | Cash On Delivery available for order value upto ₹3000</p>
+                        <div id="empCart">
+                                <p>Your cart is empty</p>
+                                <button style="cursor:pointer;">START SHOPPING</button>
+                        </div>
                     </div>
-                   </div>
                 </div>
             </div>
         </div>
