updated nav bar

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         </div>
     </div>
     <div class="topSeller">
-        <h1 style="text-align:center;">Top Sellers</h1>
+        <h1 style="text-align:center;"><a id="shoP">Top Sellers</a></h1>
 
         <div>
             <p id="smart">Smart Watches</p>
