linked product pages

--- a/index.html
+++ b/index.html
@@ -193,23 +193,20 @@
 
         <div class="mySlides">
 
-            <img
-                src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Watch_xtend_wbann_1_1400x.jpg?v=1651490614" />
+            <img onclick="gotoBoatxtend()" src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Watch_xtend_wbann_1_1400x.jpg?v=1651490614" />
 
         </div>
         <div class="mySlides">
 
-            <img
-                src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Savings-Round-The-Clock_wbann_1400x.jpg?v=1651128820" />
+            <img onclick="gotoTopseller()" src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Savings-Round-The-Clock_wbann_1400x.jpg?v=1651128820" />
 
         </div>
         <div class="mySlides">
 
-            <img
-                src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/WhatsApp_Image_2022-04-29_at_11.32.28_AM_1400x.jpg?v=1651212278" />
+            <img onclick="gotoAirdopes115()" src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/WhatsApp_Image_2022-04-29_at_11.32.28_AM_1400x.jpg?v=1651212278" />
         </div>
         <div class="mySlides">
-            <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/AD500_anc_wbann_1400x.jpg?v=1649855267" />
+            <img onclick="gotoAirdopes500()" src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/AD500_anc_wbann_1400x.jpg?v=1649855267" />
         </div>
 
         <!-- Next and previous buttons -->
@@ -1018,4 +1015,16 @@
       des.style.display="none";
       fea.style.display="block";
   })
-</script>
+  function gotoBoatxtend(){
+      window.location.href="boAtextend.html"
+  }
+  function gotoAirdopes115(){
+      window.location.href="airdopes115.html"
+  }
+  function gotoAirdopes500(){
+      window.location.href="airdopes500anc.html"
+  }
+  function gotoTopseller(){
+      window.location.href="index.html#shoP";
+  }
+  </script>
