--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
         .mySlides>img {
             cursor: pointer;
         }
-
+       a{
+           color:white;
+           text-decoration: none;
+       }
     </style>
 </head>
 
@@ -147,7 +150,7 @@
                     </svg></a>
                 <div id="userMenu">
                     <p>Hi boAthead!<span id="cross" style="color:white;font-size:25px;">&times</span></p>
-                    <button>Login</button>
+                    <button><a href="login.html">Login</a></button>
                 </div>
 
 
