--- a/airdopes115.HTML
+++ b/airdopes115.HTML
@@ -348,19 +348,19 @@
 <script src="navbar.js"></script>
 <script src="bottom.js"></script>
 <script>
-    var arr=JSON.parse(localStorage.getItem("cartData"))||[];
-    document.querySelector("#btn5").addEventListener("click",function(){
-    var image=document.querySelector("#tyagi>img").getAttribute("src");
-    var name=document.querySelector("#st>h1").innerText;
-    var localprice=document.querySelector("#suraj>p:first-child>span").innerText;
-    var originalprice=document.querySelector("#suraj>p:nth-child(2)").innerText;
-    var obj={
-        image_url:image,
-        name:name,
-        price:localprice,
-        original_price:originalprice
-    }
-   arr.push(obj);
-   localStorage.setItem("cartData",JSON.stringify(arr));
-    })
+//     var arr=JSON.parse(localStorage.getItem("cartData"))||[];
+//     document.querySelector("#btn5").addEventListener("click",function(){
+//     var image=document.querySelector("#tyagi>img").getAttribute("src");
+//     var name=document.querySelector("#st>h1").innerText;
+//     var localprice=document.querySelector("#suraj>p:first-child>span").innerText;
+//     var originalprice=document.querySelector("#suraj>p:nth-child(2)").innerText;
+//     var obj={
+//         image_url:image,
+//         name:name,
+//         price:localprice,
+//         original_price:originalprice
+//     }
+//    arr.push(obj);
+//    localStorage.setItem("cartData",JSON.stringify(arr));
+//     })
 </script>
