--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
         .mySlides>img {
             cursor: pointer;
         }
-<<<<<<< HEAD
         #About p{
             font-size:15px;
         }
@@ -120,12 +119,10 @@
             font-size:40px;
         }
 
-=======
        a{
            color:white;
            text-decoration: none;
        }
->>>>>>> 28098593d22beb3838b16b6233f8a9ff6cca3060
     </style>
 </head>
 
@@ -162,13 +159,10 @@
                             stroke="currentColor" stroke-width="3"></path>
                     </svg></a>
                 <div id="userMenu">
-<<<<<<< HEAD
                     <p style="font-size:18px;">Hi boAthead!<span id="cross" style="color:white;font-size:25px;">&times</span></p>
                     <button>Login</button>
-=======
                     <p>Hi boAthead!<span id="cross" style="color:white;font-size:25px;">&times</span></p>
-                    <button><a href="login.html">Login</a></button>
->>>>>>> 28098593d22beb3838b16b6233f8a9ff6cca3060
+                    <button><a>Login</a></button>
                 </div>
 
 
@@ -1015,18 +1009,18 @@
         dots[imgNumber - 1].className += " modDot";
     }
    
-  var des = document.querySelector(".fea+div");
-  des.style.display="block"
-  var fea =document.querySelector(".fea+div+div");
-  fea.style.display="none"
-  document.querySelector(".des").addEventListener("click",function(){
-      des.style.display="block";
-      fea.style.display="none";
-  })
-  document.querySelector(".fea").addEventListener("click",function(){
-      des.style.display="none";
-      fea.style.display="block";
-  })
+//   var des = document.querySelector(".fea+div");
+//   des.style.display="block"
+//   var fea =document.querySelector(".fea+div+div");
+//   fea.style.display="none"
+//   document.querySelector(".des").addEventListener("click",function(){
+//       des.style.display="block";
+//       fea.style.display="none";
+//   })
+//   document.querySelector(".fea").addEventListener("click",function(){
+//       des.style.display="none";
+//       fea.style.display="block";
+//   })
   function gotoBoatxtend(){
       window.location.href="boAtextend.html"
   }
@@ -1039,4 +1033,7 @@
   function gotoTopseller(){
       window.location.href="index.html#shoP";
   }
+  document.querySelector(".slide1").addEventListener("click",function(){
+      window.location.href="airdopes500anc.html"
+  })
   </script>
