--- a/airdopes500anc.HTML
+++ b/airdopes500anc.HTML
@@ -82,11 +82,11 @@
     </div>
     <div id="shubham">
         <div id="tyagi">
-            <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/main3_1_600x.png?v=1640628318">
+            <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/Main-black_caf27ebe-73b4-4ab6-bc76-3b81f0416fc2_600x.png?v=1650020838">
         </div>
         <div id="st">
-            <h1>boAt Watch Xtend‌</h1>
-            <p>SMART WATCHES</p>
+            <h1>Airdopes 500 ANC</h1>
+            <p>WIRELESS EARBUDS</p>
             <div class="rockstar">
                 <span style="color: #ed1c24;" class="fa fa-star checked"></span>
                 <span style="color: #ed1c24;" class="fa fa-star checked"></span>
@@ -96,8 +96,8 @@
                 <p>4.68 (34 reviews)</p>
             </div>
             <div id="suraj">
-                <p>₹ <span>2499</span></p>
-                <p>₹ 7,990</p>
+                <p>₹ <span>3999</span></p>
+                <p>₹ 9,999</p>
             </div>
             <p>Inclusive of all taxes</p>
             <p>Get 20% cashback upto Rs.500 using <img
@@ -120,7 +120,7 @@
     <div id="ion">
         <p>DESCRIPTION</p>
         <hr style="border: 1px solid red; width: 135px; margin-top: -15px;">
-        <h1 style="text-align: center; color: white; font-size: 50px;  font-family: sans-serif;" >BoAt Watch‌ Xtend</h1>
+        <h1 style="text-align: center; color: white; font-size: 50px;  font-family: sans-serif;" >Airdopes 500 ANC</h1>
         <p style="text-align: center; color: white; padding: 0px 80px; font-family: sans-serif; font-size: 15px; letter-spacing: 1px;">
             Ask more, get more, and do more with the smartest smartwatch in town - the all-new boAt Xtend. Leave your phone in your pocket and get your tasks done with a built-in Alexa. Take control over your music, fitness, and more with a 1.69 inch complete capacitive LCD display. Your wellness is now on your wrist with its Guided Meditative Breathing, Stress Monitor, and Sleep & SPO2 Monitoring. Its 50 watch faces let you don a unique style every day. Make more out of your days with boAt Xtend.</p></div>
             <div>
