--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         </div>
 
         <div id="smartWatches">
-            <div class="card1">
+            <div onclick="gotoAirdopes441()" class="card1">
                 <div>
                     <img
                         src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/218997d1-3fe9-4a19-809c-94a8a2d05273_400x.png?v=1625045659" />
@@ -372,7 +372,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="card1">
+            <div onclick="gotoAirdopes402()" class="card1">
                 <div>
                     <img
                         src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/402-main-img_400x.png?v=1630059242" />
@@ -401,7 +401,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="card1">
+            <div onclick="gotoAirdopes281()" class="card1">
                 <div>
                     <img
                         src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/main3_6e1b5a7a-8f56-48c6-819d-24395393db81_400x.png?v=1624430639" />
@@ -432,7 +432,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="card1">
+            <div onclick="gotoAirdopes681()" class="card1">
                 <div>
                     <img
                         src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/main-img_AD621_1_400x.png?v=1616230788" />
@@ -1026,5 +1026,17 @@
   }
   function gotoTopseller(){
       window.location.href="index.html#shoP";
+  }
+  function gotoAirdopes441(){
+      window.location.href="airdopes441.html"
+  }
+  function gotoAirdopes402(){
+      window.location.href="airdopes402.html"
+  }
+  function gotoAirdopes281(){
+      window.location.href="airdopes281.html"
+  }
+  function gotoAirdopes681(){
+      window.location.href="airdopes681.html"
   }
   </script>
