updated payment option

--- a/index.html
+++ b/index.html
@@ -489,19 +489,8 @@
                             <p>Rs. 3999</p>
                         </div>
                     </div>
-                    <div class="desFea">
-                        
-                        <div class="description">
-                            <button class="des">DESCRIPTION</button>
-                            <button class="fea">FEATURES</button>
-                            <div ><p style="font-size:15px">Focus on what matters with Airdopes 500 ANC that helps you tap out of chaos. Block unwanted background noise 
-                            upto 35 dB with its Hybrid Active Noise Cancellation. Make your calls crystal clear with...</p></div>
-                            </div>
-                            
-                            <div></div>
-                        </div>
-
-                    </div>
+                    <p class="desfea" style="font-size:15px">Focus on what matters with Airdopes 500 ANC that helps you tap out of chaos. Block unwanted background noise 
+                    upto 35 dB with its Hybrid Active Noise Cancellation. Make your calls crystal clear with...</p>
 
                 </div>
 
@@ -1009,8 +998,6 @@
         dots[imgNumber - 1].className += " modDot";
     }
    
-  var des = document.querySelector(".fea+div");
-  des.style.display="block"
 //   var fea =document.querySelector(".fea+div+div");
 //   fea.style.display="none"
 //   document.querySelector(".des").addEventListener("click",function(){
