--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
         dots[imgNumber - 1].className += " modDot";
     }
    
-  var des = document.querySelector(".fea+div");
+  /* var des = document.querySelector(".fea+div");
   des.style.display="block"
   var fea =document.querySelector(".fea+div+div");
   fea.style.display="none"
@@ -1014,7 +1014,7 @@
   document.querySelector(".fea").addEventListener("click",function(){
       des.style.display="none";
       fea.style.display="block";
-  })
+  }) */
   function gotoBoatxtend(){
       window.location.href="boAtextend.html"
   }
